apt-listchanges (2.71) UNRELEASED; urgency=low

  [ Packaging ]

  * Simplify debian/config from old cruft from 1.x series.

  [ Library ]

  * DebianControl* classes are renamed into Control*

 -- Pierre Habouzit <madcoder@debian.org>  Sun, 15 Oct 2006 16:10:20 +0200

apt-listchanges (2.70) unstable; urgency=low

  [ Damien Laniel ]
  * Fixed the postrm script to remove /etc/apt/listchanges.conf on purge
    and rewrote the test for ucf existence (was using "which" which isn't
    essential)
  * Fixed the postinst script not to use ucf if /etc/apt/listchanges.conf
    doesn't exist, ie was purged

  [ Pierre Habouzit ]
  * Use Damien's patch that also should fix the `code 10 ` postinst problem.
    (Closes: 391628, 390997)

 -- Pierre Habouzit <madcoder@debian.org>  Sat,  7 Oct 2006 22:00:54 +0200

apt-listchanges (2.69) unstable; urgency=low

  * Final upload targetting etch, the l10n upload:
    + fr.po thanks to Christian Perrier (Closes: 390979),
    + es.po thanks to Javier Fernández-Sanguino Peña (Closes: 391114).

 -- Pierre Habouzit <madcoder@debian.org>  Sat,  7 Oct 2006 17:39:53 +0200

apt-listchanges (2.68) unstable; urgency=low

  * Fix the mail instantiation, thanks to Daniel Lublin (Closes: 391016).

 -- Pierre Habouzit <madcoder@debian.org>  Wed,  4 Oct 2006 12:06:34 +0200

apt-listchanges (2.67) unstable; urgency=low

  * Fix confirm behaviour, broken in 2.65 upload (Closes: 390784).

 -- Pierre Habouzit <madcoder@debian.org>  Tue,  3 Oct 2006 10:01:27 +0200

apt-listchanges (2.66) unstable; urgency=low

  * Remove cruft in postinst for versions older than sarge ones.
  * Remove /var/lib/apt/listchanges.db at purge (Closes: 319603).
  * Use 8bit encoding for the mails, so that they are greppable again
    (Closes: 211714)
  * If we are hit by a signal, abort with exit 10, making the upgrade fail.
    (Closes: 338717, 301604)

 -- Pierre Habouzit <madcoder@debian.org>  Mon,  2 Oct 2006 23:09:47 +0200

apt-listchanges (2.65) unstable; urgency=low
